--- a/estilo.css
+++ b/estilo.css
@@ -4,6 +4,7 @@
 }
 body{
   background-color: #ffedd5;
+  font-family: 'Roboto', sans-serif;
 }
 ul{
   list-style: none;
@@ -19,9 +20,15 @@ section{
 }
 header h1{
   margin-bottom: 4px;
+  font-size: 28px;
+  line-height: 33px;
 }
 header h1 span{
   color: #995000;
+}
+header p{
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 14px;
 }
 section{
   margin-bottom: 25px;
@@ -30,6 +37,7 @@ section h2{
   background-color: #fde7aa;
   padding: 8px 16px;
   text-align: center;
+  font-size: 18px;
 
   margin-bottom: 24px;
 }
@@ -42,4 +50,16 @@ li .details{
 }
 .details h3{
   margin-bottom: 8px;
+  font-size: 16px;
+  line-height: 19px;
+}
+.details p{
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 16px;
+  line-height: 21px;
+}
+h1,h2,h3, .price{
+  font-family: 'Roboto Mono', serif;
+  text-transform: uppercase;
+  color: #2d2c2a;
 }
